// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zero-config build should generate the expected files 1`] = `
Object {
  "0-2d4c17dcf56e1762b025.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/index.html": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\" data-message=\\"Hello world!\\"></div>
      <script type=\\"text/javascript\\" src=\\"/runtime-dd9f3671ce9f3a689039.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry-df98e7bcae522bbcf688.js\\"></script>
    </body>
  </html>
",
  "runtime-dd9f3671ce9f3a689039.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "skuDefaultClientEntry-df98e7bcae522bbcf688.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`zero-config start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry.js\\"></script>
    
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "
  <!DOCTYPE html>
  <html>
    <head>
      <meta charset=\\"UTF-8\\">
      <title>hello-world</title>
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
      
    </head>
    <body>
      <div id=\\"app\\"><div data-reactroot=\\"\\">Hello World!</div></div>
      <script type=\\"text/javascript\\" src=\\"/runtime.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/vendors~skuDefaultClientEntry.js\\"></script>
<script type=\\"text/javascript\\" src=\\"/skuDefaultClientEntry.js\\"></script>
    </body>
  </html>
",
  "warnings": Array [],
}
`;
